fix: update upload box styles to improve visibility and layout

--- a/app/DeviceInvy/static/css/device.css
+++ b/app/DeviceInvy/static/css/device.css
@@ -375,8 +375,14 @@ tr:hover {
 }
 
 #uploadBox{
-  background: blur(5px);
+  display: none;
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1001;
 }
 
 .upload-form-group {
